GUI-2627: Bump up modal size and bump down font size for alarm history details dialog to avoid cutting off Download button

--- a/eucaconsole/static/sass/pages/alarm_history.scss
+++ b/eucaconsole/static/sass/pages/alarm_history.scss
@@ -11,6 +11,7 @@ table {
 .alarm-history-details-modal {
     pre {
         margin: 1rem 0 0;
+        font-size: 0.9rem;
     }
 
     .button {
